--- a/style.css
+++ b/style.css
@@ -101,7 +101,16 @@ input, select {
     vertical-align:middle;
 }
 
+
+
+
+
 /* My CSS */
+
+
+
+
+
 * {
 
     text-decoration: none;
@@ -117,7 +126,7 @@ header {
 
     background-color: #fff;
     width: 100%;
-    height: 100px;
+    height: 50px;
 
 }
 header .header-brand {
@@ -127,10 +136,9 @@ header .header-brand {
     font-weight: 900;
     color: #111;
     text-transform: uppercase;
-    display:  block;
+    display: block;
     margin: 0 auto;
     text-align: center;
-    padding: 20px 0px;
 
 }
 header nav ul{
@@ -157,9 +165,12 @@ header nav ul li a{
 }
 
 @media only screen and (min-width: 1000px){
+    header{
+        height: 100px;
+    }
     header .header-brand{
     
-    margin: 28px 0px;
+    margin: 32px 0px;
     text-align: left;
     line-height: 35px;
     padding: 0px 20px 0px 30px;
@@ -175,7 +186,7 @@ header nav ul li a{
     }
     header nav ul li a{
     
-        line-height: 87px;
+        line-height: 97px;
     
     }
 
@@ -184,7 +195,7 @@ header nav ul li a{
     .section-bgImage{
 
         width: 100%;
-        height: 500px;
+        height: 100vh;
         background-image: url('res/mc5.jpg');
         background-repeat: no-repeat;
         background-position: center;
@@ -213,6 +224,12 @@ header nav ul li a{
 
     display: table-cell;
     vertical-align: middle;
+
+}
+.vertical-top{
+
+    display: table-cell;
+    vertical-align: top;
 
 }
 .index-banner h2{
@@ -251,6 +268,60 @@ header nav ul li a{
     position: absolute;
 
 }
+.index-banner2{
+
+    width: 100%;
+    height: 40vh;
+    display: table;
+   
+}
+.index-banner2 h2{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 28px;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 100px;
+    font-weight: 600;
+
+}
+.index-banner2 ul{
+
+    list-style-type: none;
+
+}
+.ib2-i1, .ib2-i2, .ib2-i3{
+
+
+
+}
+.ib2-skill-list{
+
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 18px;
+    padding-left: 25px;
+    
+}
+.index-banner3{
+
+    width: 100%;
+    height: 100vh;
+    display: table;
+   
+}
+.section-bgImage3{
+
+    height: 100%;
+    width: 100%;
+    background-image: url('res/mc4.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 0.4;
+    z-index: -1;
+    position: absolute;
+
+}
 
 /* Footer */
 
@@ -268,6 +339,7 @@ footer ul{
     float: left;
     padding-left: 15px;
     padding-top: 10px;
+
 }
 footer li{
 
@@ -298,3 +370,5 @@ footer li a{
     width: 100%;
 
 }
+
+/* misc */
